objects/TenantUsageTypeMultiplier__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>KQ_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effenddatetime__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>effstartdatetime__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mgmtusagetypemultiplier__c</fullName>
        <label>Management Usage Type Multiplier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>systemmodstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tier2multiplier__c</fullName>
        <label>Tier 2 Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tier2rawusagelowthreshold__c</fullName>
        <label>Tier 2 Raw Usage Low Threshold</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tier3multiplier__c</fullName>
        <label>Tier 3 Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tier3rawusagelowthreshold__c</fullName>
        <label>Tier 3 Raw Usage Low Threshold</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tier4multiplier__c</fullName>
        <label>Tier 4 Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tier4rawusagelowthreshold__c</fullName>
        <label>Tier 4 Raw Usage Low Threshold</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usagebusinessenvtype__c</fullName>
        <label>Usage Business Environment Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype0__c</fullName>
        <label>Usage Subtype 0</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype1__c</fullName>
        <label>Usage Subtype 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype2__c</fullName>
        <label>Usage Subtype 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagetypedef__c</fullName>
        <label>Usage Type Definition</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>